Library/AXL(Library)/C, C++/AXD.h

//========== Board and module information
// Verify if DIO module exists
DWORD    __stdcall AxdInfoIsDIOModule(DWORD *upStatus);
// Verify DIO in/output module number
DWORD    __stdcall AxdInfoGetModuleNo(long lBoardNo, long lModulePos, long *lpModuleNo);
// Verify the number of DIO in/output module
DWORD    __stdcall AxdInfoGetModuleCount(long *lpModuleCount);
// Verify the number of input contacts of specified module
DWORD    __stdcall AxdInfoGetInputCount(long lModuleNo, long *lpCount);
// Verify the number of output contacts of specified module
DWORD    __stdcall AxdInfoGetOutputCount(long lModuleNo, long *lpCount);
// Verify the base board number, module position and module ID with specified module number
DWORD    __stdcall AxdInfoGetModule(long lModuleNo, long *lpBoardNo, long *lpModulePos, DWORD *upModuleID);
// Verify specified module board : Sub ID, module name, module description
//===============================================/
// support product : EtherCAT
// upModuleSubID   : EtherCAT SubID(for distinguish between EtherCAT modules)
// szModuleName         : model name of module(50 Bytes)
// szModuleDescription  : description of module(80 Bytes)
//======================================================//
DWORD    __stdcall AxdInfoGetModuleEx(long lModuleNo, DWORD *upModuleSubID, char* szModuleName, char* szModuleDescription);
//Verify Module status of specified module board
DWORD    __stdcall AxdInfoGetModuleStatus(long lModuleNo);
//========== Verification group for input interrupt setting
// Use window message, callback API or event method in order to get interrupt message into specified module
//========= Interrupt-related function ======================================================================================
//The callback function method has the advantage that the event can be notified very quickly because the callback function is called immediately at the time of the occurrence of the event.
//But, The main process is stalled until the callback function is completely terminated.
//In other words, Care must be taken when there is work load in the callback function.
//The event method is a method of continuously detecting and processing the occurrence of an interrupt by using a thread.
//The event method has the disadvantage that system resources are occupied by thread, but it has the advantage that interrupts can be detected and processed the fastest.
//This method is not commonly used. but it is used when quick interrupt handling is main concern.
//The event method uses a specific thread to monitor the occurrence of an event, and it works independently of the main process.
//So, This is the recommended method because it enables the most efficient use of resources in a multiprocessor system.
//Use a Window message or callback function to receive interrupt message.
//(Message handle, Message ID, Callback function, Interrupt event)
//    hWnd        : Used to receive window handles and window messages. If not, enter NULL.
//    uMessage    : Massage of window handle. To not use this or use the default value, enter 0.
//    proc        : Pointer of the function to be called when an interrupt occurs. To not use this, enter NULL.
//    pEvent      : Event handling when using event method.
// Ex)
// AxdiInterruptSetModule(0, Null, 0, AxtInterruptProc, NULL);
// void __stdcall AxtInterruptProc(long lActiveNo, DWORD uFlag){
//     ... ;
// }
DWORD    __stdcall AxdiInterruptSetModule(long lModuleNo, HWND hWnd, DWORD uMessage, AXT_INTERRUPT_PROC pProc, HANDLE *pEvent);
// Set whether to use interrupt of specified module
//======================================================//
// uUse    : DISABLE(0)    // Interrupt Disable
//         : ENABLE(1)        // Interrupt Enable
//======================================================//
DWORD    __stdcall AxdiInterruptSetModuleEnable(long lModuleNo, DWORD uUse);
// Verify whether to use interrupt of specified module
//======================================================//
// *upUse  : DISABLE(0)    // Interrupt Disable
//         : ENABLE(1)        // Interrupt Enable
//======================================================//
DWORD    __stdcall AxdiInterruptGetModuleEnable(long lModuleNo, DWORD *upUse);
// Verify the position interrupt occurred
DWORD    __stdcall AxdiInterruptRead(long *lpModuleNo, DWORD *upFlag);
//========== Input interrupt rising / Verification group for setting of interrupt occurrence in falling edge
// Set the rising or falling edge value by bit unit in specified input contact module and Offset position of Interrupt Rising / Falling Edge register
//===============================================================================================//
// lModuleNo : Number of module
// lOffset   : Offset position for input contact
// uMode     : DOWN_EDGE(0)
//           : UP_EDGE(1)
// uValue    : DISABLE(0)
//           : ENABLE(1)
//===============================================================================================//
DWORD    __stdcall AxdiInterruptEdgeSetBit(long lModuleNo, long lOffset, DWORD uMode, DWORD uValue);
// Set the rising or falling edge value by byte unit in specified input contact module and Offset position of Interrupt Rising / Falling Edge register
//===============================================================================================//
// lModuleNo : Number of module
// lOffset   : Offset position for input contact
// uMode     : DOWN_EDGE(0)
//           : UP_EDGE(1)
// uValue    : 0x00 ~ 0x0FF
//===============================================================================================//
DWORD    __stdcall AxdiInterruptEdgeSetByte(long lModuleNo, long lOffset, DWORD uMode, DWORD uValue);
// Set the rising or falling edge value by word unit in specified input contact module and Offset position of Interrupt Rising / Falling Edge register
//===============================================================================================//
// lModuleNo : Number of module
// lOffset   : Offset position for input contact
// uMode     : DOWN_EDGE(0)
//           : UP_EDGE(1)
// uValue    : 0x00 ~ 0x0FFFF
//===============================================================================================//
DWORD    __stdcall AxdiInterruptEdgeSetWord(long lModuleNo, long lOffset, DWORD uMode, DWORD uValue);
// Set the rising or falling edge value by double word unit in specified input contact module and Offset position of Interrupt Rising / Falling Edge register
//===============================================================================================//
// lModuleNo : Number of module
// lOffset   : Offset position for input contact
// uMode     : DOWN_EDGE(0)
//           : UP_EDGE(1)
// uValue    : 0x00 ~ 0x0FFFFFFFF
//===============================================================================================//
DWORD    __stdcall AxdiInterruptEdgeSetDword(long lModuleNo, long lOffset, DWORD uMode, DWORD uValue);
// Verify the rising or falling edge value by bit unit in specified input contact module and Offset position of Interrupt Rising / Falling Edge register
//===============================================================================================//
// lModuleNo : Number of module
// lOffset   : Offset position for input contact
// uMode     : DOWN_EDGE(0)
//           : UP_EDGE(1)
// *upValue  : 0x00 ~ 0x0FF
//===============================================================================================//
DWORD    __stdcall AxdiInterruptEdgeGetBit(long lModuleNo, long lOffset, DWORD uMode, DWORD *upValue);
// Verify the rising or falling edge value by byte unit in specified input contact module and Offset position of Interrupt Rising / Falling Edge register
//===============================================================================================//
// lModuleNo : Number of module
// lOffset   : Offset position for input contact
// uMode     : DOWN_EDGE(0)
//           : UP_EDGE(1)
// *upValue  : 0x00 ~ 0x0FF
//===============================================================================================//
DWORD    __stdcall AxdiInterruptEdgeGetByte(long lModuleNo, long lOffset, DWORD uMode, DWORD *upValue);
// Verify the rising or falling edge value by word unit in specified input contact module and Offset position of Interrupt Rising / Falling Edge register
//===============================================================================================//
// lModuleNo : Number of module
// lOffset   : Offset position for input contact
// uMode     : DOWN_EDGE(0)
//           : UP_EDGE(1)
// *upValue  : 0x00 ~ 0x0FFFF
//===============================================================================================//
DWORD    __stdcall AxdiInterruptEdgeGetWord(long lModuleNo, long lOffset, DWORD uMode, DWORD *upValue);
// Verify the rising or falling edge value by double word unit in specified input contact module and Offset position of Interrupt Rising / Falling Edge register
//===============================================================================================//
// lModuleNo : Number of module
// lOffset   : Offset position for input contact
// uMode     : DOWN_EDGE(0)
//           : UP_EDGE(1)
// *upValue  : 0x00 ~ 0x0FFFFFFFF
//===============================================================================================//
DWORD    __stdcall AxdiInterruptEdgeGetDword(long lModuleNo, long lOffset, DWORD uMode, DWORD *upValue);